# django-sniplates

./: .coveragerc  .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  coverage_report.sh  pyproject.toml  runtests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yaml
docs/: Makefile  changelog.rst  conf.py  extractor.rst  filters.rst  formulation.rst  index.rst  make.bat  tags.rst
sniplates/templates/: bootstrap3_form.html
sniplates/templates/sniplates/: bootstrap.html  django.html
sniplates/templatetags/: sniplates.py
src/sniplates/templatetags/: sniplates.py
tests/: forms.py  report_settings.py  settings.py  test_core.py  test_filters.py  test_forms.py  test_included.py  test_inherited.py  test_nested.py  test_reuse.py  test_widgets_django.py  tests.py  utils.py
tests/templates/field_tag/: choices  choices_multi  choices_multi2  choices_value_none  empty_field  field  multiplechoice  override  override2  widget2  widgets  widgets_django
tests/templates/filters/: flatattrs
tests/templates/include/: base  included  widgets
tests/templates/inheritance/: base  block_overlap  block_overlap_widget  parent_inherit  parent_inherit_base  parent_inherit_widgets  parent_overlap  parent_overlap_widgets  super  super_widget_base  super_widget_inherit
tests/templates/invalid/: bad_name  no_lib  no_widget  not_loaded
tests/templates/load_widgets/: load_widgets  load_widgets_three  load_widgets_two  other.html  simple.html
tests/templates/nested_tag/: asvar  empty  invalid  invalid2  keep_widgets  simple  widgets
tests/templates/reuse/: inwidget  reuse  simple
tests/templates/widget_tag/: alias_self  asvar  fixed  inherit  var  widgets.2  widgets.3  widgets.one  widgets.two
