[project]
name = "django-sniplates"
version = "0.7.2"
description = "Efficient template macro sets for Django"
authors = [
  { name = "Curtis Maloney", email="curtis@tinbrain.net" },
]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["django", "templates", "forms"]
classifiers = [
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 2.2",
  "Framework :: Django :: 3",
  "Framework :: Django :: 4.0",
  "Framework :: Django :: 4.1",
  "Framework :: Django :: 4.2",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

dependencies = [
  "django (>=3.0.5)",
]

[project.urls]
Repository = "https://github.com/funkybob/django-sniplates"
Documentation = "https://sniplates.readthedocs.io/en/latest/"

[project.optional-dependencies]
test = [
  "isort",
  "pytest",
  "pytest-cov",
  "pytest-django",
  "pylint",
  "pylint-pytest",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"

django_find_project = false
pythonpath = ["."]

addopts = "--cov=src/"

[tool.coverage.run]
branch = true
source = ["src/"]

[tool.pylint."message control"]
disable = ["missing-module-docstring", "missing-class-docstring", "missing-function-docstring", "raise-missing-from", "redefined-outer-name"]

[tool.isort]
combine_as_imports = true
default_section = "THIRDPARTY"
include_trailing_comma = true
line_length = 119
